syntax = "proto3";
option java_package = "top.yein.tethys.grpc";
option java_outer_classname = "PacketPb";

message PacketRequest {
  // 发起请求的用户ID
  int64 requestUid = 1;
  // Packet数据
  bytes data_bytes = 2;
}

message PacketResponse {
  // 请求是否成功
  bool success = 1;
  // 响应结果数据
  bytes data_bytes = 2;
}

service Packet {

  // 处理Packet请求
  rpc Process(PacketRequest) returns(PacketResponse) {}
}
